Fix templates (admin, user); Remove word-wrap for description and gift title;

--- a/assets/css/startbootstrap-agency.scss
+++ b/assets/css/startbootstrap-agency.scss
@@ -104,16 +104,16 @@ section#contact :-ms-input-placeholder {
 }
 
 /* word-wrap for description on admin page and user page */
-#description {
-  word-wrap: break-word;
-  width: 525px;
-}
-
-/* word-wrap for gift title on admin page and user page */
-#gift-title {
-  word-wrap: break-word;
-  width: 415px;
-}
+//#description {
+//  word-wrap: break-word;
+//  width: 525px;
+//}
+//
+///* word-wrap for gift title on admin page and user page */
+//#gift-title {
+//  word-wrap: break-word;
+//  width: 415px;
+//}
 
 /* Overriding <p> element */
 p {
